--- a/public/index.html
+++ b/public/index.html
@@ -28,28 +28,32 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <a href="#" class="navbar-brand"><img src="assets/cube-one-color-48-189122.png" alt=""></a>
+      <a href="#" class="navbar-brand"><img src="../assets/cube-one-color-48-189122.png" alt=""></a>
       <div class="collapse navbar-collapse" id="myNav">
         <ul class="navbar-nav">
           <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Games</a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">HiLo Cards</a>
-                <a class="dropdown-item" href="#">Whack</a>
-                <a class="dropdown-item" href="#">Simon</a>
+                <a class="dropdown-item" href="hilo.html">HiLo Cards</a>
+                <a class="dropdown-item" href="whack.html">Whack</a>
+                <a class="dropdown-item" href="simon.html">Simon</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">In Progress</a>
+                <a class="dropdown-item" href="workit.html">In Progress</a>
               </div>
           </li>
           <li class="nav-item"><a href="#" class="nav-link">Research</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Connect</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+          <li class="nav-item"><a href="connect.html" class="nav-link">Connect</a></li>
+
+          <li class="nav-item"><a href="#" data-toggle="modal" data-target="#myMod" class="nav-link">About</a></li>
         </ul>
       </div>
       <h5 class="nav-item text-right"><a href="#" class="nav-link">PLAYD</a></h5>
     </nav>
 
   <!-- Image Carousel -->
+  <div class="container">
+
+
   <div id="car" class="carousel slide" data-ride="carousel">
 
     <ol class="carousel-indicators">
@@ -61,28 +65,30 @@
     </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="assets/pexels-photo (1).jpg" alt="" class="img-fluid">
+              <img src="../assets/pexels-photo (1).jpg" alt="" class="img-fluid">
             </div>
 
             <div class="carousel-item">
-              <img src="assets/pexels-photo-127053.jpeg" alt="" class="img-fluid">
+              <img src="../assets/pexels-photo-127053.jpeg" alt="" class="img-fluid">
             </div>
 
             <div class="carousel-item">
-              <img src="assets/pexels-photo-776657.jpeg" alt="" class="img-fluid">
+              <img src="../assets/pexels-photo-776657.jpeg" alt="" class="img-fluid">
             </div>
 
             <div class="carousel-item">
-              <img src="assets/cube-play-colorful-eye-numbers-51361_large.jpeg" alt="" class="img-fluid">
+              <img src="../assets/cube-play-colorful-eye-numbers-51361_large.jpeg" alt="" class="img-fluid">
             </div>
         </div>
+  </div>
   </div>
 <br>
 
   <!-- Intro Jumotron -->
   <div class="container">
       <div class="jumbotron shadow-lg" style="background-color:#A2C0CD">
-        <div class="h1"><span class="badge badge-warning">Playd</span></div>
+        <!-- text-primary -->
+        <div class="h1"><span class="badge badge-warning text-primary">Playd</span></div>
         <hr class="my-5">
         <!-- rounded badge: -->
             <p class="lead"><span class="badge badge-pill" style="background-color:#052F5F">Do you know</span> what my favorite part of the game is?  The opportunity to play.  -Mike Singletary</p>
@@ -90,19 +96,20 @@
         <hr class="my-1">
             <p><span class="badge" style="background-color:#052F5F">In enim justo,</span> rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt.</p>
 
-            <button type="button" class="btn btn-warning">Learn More</button>
+            <button type="button" class="btn btn-warning text-primary">Learn More</button>
       </div>
   </div>
 <hr class="my-5">
+
   <!-- Photo Section -->
   <div class="container">
       <div class="row shadow-lg">
         <div class="col-md-6">
           <div>
-            <img src="assets/pexels-photo-207924.jpeg" class="img-fluid img-thumbnail" alt="">
+            <img src="../assets/pexels-photo-207924.jpeg" class="img-fluid img-thumbnail" alt="">
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6"><br>
           <h2 class="h2 text-primary" id="fontK">Superior Game Logic</h2>
           <hr>
           <p class="h5 text-primary" id="fontK">Quote about motto which emphasizes initializing individual to the point they want to interact & then influence through the experience of play. </p>
@@ -113,19 +120,19 @@
       <hr class="my-5">
 <div class="row shadow-lg">
       <div class="col-md-4">
-        <img src="assets/pexels-photo-136349.jpeg" class="img-fluid img-thumbnail" alt=""><br><br>
-        <h5 class="text-center text-primary" id="fontK">Initialize</h5>
+        <img src="../assets/pexels-photo-136349.jpeg" class="img-fluid img-thumbnail" alt=""><br><br>
+        <h1 class="text-center" id="fontK"><button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="bottom" title="hello world asldfa a;sldf ;adsfpoier pqoweri z.c;l">Initialize</button></h1>
       </div>
 
 
         <div class="col-md-4">
-          <img src="assets/pexels-photo-209728.jpeg" class="img-fluid img-thumbnail" alt=""><br><br>
-          <h5 class="text-center text-primary" id="fontK">Interact</h5>
+          <img src="../assets/pexels-photo-209728.jpeg" class="img-fluid img-thumbnail" alt=""><br><br>
+          <h5 class="text-center text-primary" id="fontK"><button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="bottom" title="interact with others when appropriate in situations where strenths can be identified w/others so that all know">Interact</button></h5>
         </div>
 
         <div class="col-md-4">
-          <img src="assets/play-stone-network-networked-interactive-163064.jpeg" class="img-fluid img-thumbnail" alt=""><br><br>
-          <h5 class="text-center text-primary" id="fontK">Influence</h5>
+          <img src="../assets/play-stone-network-networked-interactive-163064.jpeg" class="img-fluid img-thumbnail" alt=""><br><br>
+          <h5 class="text-center text-primary" id="fontK"><button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="bottom" title="ionce one has spent enough time wrestling w/their strengths they qualify themselves oas a peer or mentor for those who have similar strengths.">Influence</h5>
         </div>
 
 
@@ -135,26 +142,26 @@
     </div>
   </div>
 
+  <div class="container-fluid">
+      © 2018 Copyright
+    </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <div id="myMod" class="modal fade">
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                  <div class="modal-header"><h3 class="modal-title">Title</h3>
+                  <button type="button" class="close" data-dismiss="modal">
+                  <span>x</span></button>
+                  </div>
+                  <div class="modal-body">
+                    Hello World
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Send Message</button>
+                  </div>
+            </div>
+          </div>
+    </div>
 
 
 
