--- a/public/simon.html
+++ b/public/simon.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!--Favicon -->
-     <link href="assets/favicon.ico" rel="icon" type="image/png" >
+     <link href="../assets/favicon.ico" rel="icon" type="image/png" >
 
      <!-- Google Fonts -->
      <link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
@@ -19,6 +19,27 @@
       body{background-color: #EDE8CE;}
 
       #fontK{font-family: 'Kalam', cursive;}
+
+      #output{
+            width:400px;
+            height:400px;
+            display:block;
+            border:1px solid black;
+        }
+        #cButtons > div {
+            width: 98px;
+            display: inline-block;
+            height: 50px;
+            text-align: center;
+            border: 1px solid black;
+        }
+        .box{
+           width:98px;
+            height:100px;
+            display:block;
+            border:1px solid black;
+            display:inline-block;
+        }
     </style>
   </head>
   <body>
@@ -96,12 +117,18 @@
         <hr class="my-1">
 
 
-            <button type="button" class="btn btn-warning text-primary">Play It</button>
+            <button type="button" class="btn btn-warning text-primary" data-toggle="collapse" href="#simon">Play It</button>
       </div>
   </div>
 <hr class="my-5">
 
-
+  <div class="container collapse" id="simon">
+    <input type="button" class="btn btn-warning" value="Start" onclick="start()">
+        <div id="output"></div>
+        <div id="message"></div>
+        <div id="cButtons"> </div>
+        <div id="guess"></div>
+  </div>
 
   <div class="container-fluid">
       © 2018 Copyright
@@ -137,6 +164,80 @@
         $('[data-toggle="tooltip"]').tooltip()
         $('[data-toggle="popover"]').popover()
       })
+
+      var arr1 = [];
+   var arr2 = [];
+   var myT;
+   var loop = 0;
+   var output = document.getElementById('output');
+   var message = document.getElementById('message');
+   var guess = document.getElementById('guess');
+   var gameplay = false;
+
+   function start() {
+           var colorArr = ["red", "green", "blue", "yellow"];
+           var html = "";
+           arr1=[];
+           arr2=[];
+           guess.innerHTML="";
+           gameplay = true;
+           message.innerHTML = "GAME Started";
+           for (var x = 0; x < colorArr.length; x++) {
+               html += '<div class="' + colorArr[x] + '" style="background-color:' + colorArr[x] + '" onclick="oGuess()">' + colorArr[x] + '</div>';
+           }
+           document.getElementById('cButtons').innerHTML = html;
+           for (var x = 0; x < 4; x++) {
+               var r = colorArr[Math.floor(Math.random() * colorArr.length)];
+               arr1.push(r);
+           }
+           loop = 0;
+           console.log(loop)
+           myT = setTimeout(goWhite, 250);
+       }
+
+       function oGuess() {
+           if(gameplay){
+           var g = event.target.className;
+           var d = document.createElement("div");
+           d.className = "box";
+           d.style.backgroundColor = g;
+           d.dataset.v = arr2.length;
+           d.onclick = function(){
+               if(gameplay){
+               var iRemove = event.target.getAttribute("data-v");
+               arr2.splice(iRemove,1);
+               event.target.parentNode.removeChild(event.target);
+               console.log(iRemove);
+               }
+           }
+           guess.appendChild(d);
+           arr2.push(g);
+           if (arr2.length == arr1.length) {
+               gameplay = false;
+               if (arr1.toString() == arr2.toString()) {
+                   message.innerText = "You were correct! :) Press START to play again.";
+               }else{
+                   message.innerHTML = "You were wrong. <br> Your guess " + arr2 + ".<br>The correct order was: " + arr1;
+               }
+           }
+       }
+       }
+
+       function goWhite() {
+           output.style.backgroundColor = "white";
+           myT = setTimeout(goColor, 250);
+       }
+
+       function goColor() {
+           output.style.backgroundColor = arr1[loop];
+           loop++;
+           if (loop >= arr1.length) {
+               clearTimeout(myT);
+           }
+           myT = setTimeout(goWhite, 1500);
+       }
+
+
     </script>
     </body>
   </html>
