--- a/public/hilo.html
+++ b/public/hilo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!--Favicon -->
-     <link href="assets/favicon.ico" rel="icon" type="image/png" >
+     <link href="../assets/favicon.ico" rel="icon" type="image/png" >
 
      <!-- Google Fonts -->
      <link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
