updated nav and added about and research pages w/design plan

--- a/public/about.html
+++ b/public/about.html
@@ -14,7 +14,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css">
 
-    <title>Whack</title>
+    <title>Template</title>
     <style media="screen">
       body{background-color: #EDE8CE;}
 
@@ -89,22 +89,60 @@
   <div class="container">
       <div class="jumbotron shadow-lg" style="background-color:#A2C0CD">
         <!-- text-primary -->
-        <div class="h1"><span class="badge badge-warning text-primary">Whack</span></div>
+        <div class="h1"><span class="badge badge-warning text-primary">About Page</span></div>
         <hr class="my-5">
         <!-- rounded badge: -->
-            <p class="lead"><span class="badge badge-pill" style="background-color:#052F5F">Take an office break</span> and see how many computers you can whack!</p>
+            <p class="lead"><span class="badge badge-pill" style="background-color:#052F5F">Use this</span> template to flesh out the other pages</p>
 
         <hr class="my-1">
 
 
-            <button type="button" class="btn btn-warning text-primary" data-toggle="collapse" href="#whack">Play It</button>
+            <button type="button" class="btn btn-warning text-primary">Learn More</button>
+      </div>
+
+      <div class="container">
+          <div class="row">
+
+
+
+
+            <div class="col-md-5">
+
+              <ul class="list-group">
+                <li class="list-group-item">First</li>
+                <li class="list-group-item">Second</li>
+                <li class="list-group-item">Third</li>
+                <li class="list-group-item">Fourth</li>
+                <li class="list-group-item">Fifth</li>
+              </ul>
+            </div>
+
+            <div class="col-md-7">
+              <img src="http://via.placeholder.com/750x400" class="img-fluid" alt="">
+            </div>
+
+            <div class="row mt-3">
+              <div class="col">
+                <span class="h3">Our story...</span>
+                <p>It all began here and then this and that happened. It all began here and then this and that happened. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>It all began here and then this and that happened. It all began here and then this and that happened.</p>
+              </div>
+            </div>
+
+          </div>
+<!-- mb-3 = margin-bottom (can do mt ml mr) -->
+          <div class="row mb-5">
+            <div class="col-md-3"><img src="http://via.placeholder.com/500x350" class="img-fluid" alt=""><p class="bg-danger text-white">More info about this</p></div>
+
+            <div class="col-md-3"><img src="http://via.placeholder.com/500x350" class="img-fluid" alt=""><p class="bg-info text-white">More info about this</p></div>
+            <div class="col-md-3"><img src="http://via.placeholder.com/500x350" class="img-fluid" alt=""><p class="bg-warning text-white">More info about this</p></div>
+            <div class="col-md-3"><img src="http://via.placeholder.com/500x350" class="img-fluid" alt=""><p class="bg-primary text-white">More info about this</p></div>
+        </div>
+        <h2>could incorporate 3rd party API BoardGame Geek to showcase games I love</h2>
       </div>
   </div>
 <hr class="my-5">
-  <div class="container collapse" id="whack">
-    <h1>test test test</h1>
 
-  </div>
 
 
   <div class="container-fluid">
@@ -114,12 +152,12 @@
     <div id="myMod" class="modal fade">
           <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
-                  <div class="modal-header"><h3 class="modal-title">Whack</h3>
+                  <div class="modal-header"><h3 class="modal-title">Title</h3>
                   <button type="button" class="close" data-dismiss="modal">
                   <span>x</span></button>
                   </div>
                   <div class="modal-body">
-                    Take an office break and see how many computers you can whack!
+                    Hello World
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Send Message</button>
