--- a/public/hilo.html
+++ b/public/hilo.html
@@ -23,6 +23,7 @@
   </head>
   <body>
     <!-- Navbar -->
+    <!-- Navbar -->
     <nav class="navbar fixed-top navbar-dark navbar-expand-sm" style="background-color:#052F5F">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNav">
         <span class="navbar-toggler-icon"></span>
@@ -41,13 +42,14 @@
                 <a class="dropdown-item" href="workit.html">In Progress</a>
               </div>
           </li>
-          <li class="nav-item"><a href="#" class="nav-link">Research</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="research.html" class="nav-link">Research</a></li>
           <li class="nav-item"><a href="connect.html" class="nav-link">Connect</a></li>
 
-          <li class="nav-item"><a href="#" data-toggle="modal" data-target="#myMod" class="nav-link">About</a></li>
+          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
         </ul>
       </div>
-      <h5 class="nav-item text-right"><a href="#" class="nav-link">PLAYD</a></h5>
+      <h5 class="nav-item text-right"><a href="#" data-toggle="modal" data-target="#myMod" class="nav-link">PLAYD</a></h5>
     </nav>
 
   <!-- Image Carousel -->
@@ -96,11 +98,14 @@
         <hr class="my-1">
 
 
-            <button type="button" class="btn btn-warning text-primary">Play It</button>
+            <button type="button" class="btn btn-warning text-primary" data-toggle="collapse" href="#hilo">Play It</button>
       </div>
   </div>
 <hr class="my-5">
+<div class="container collapse" id="hilo">
+  <h1>test test test</h1>
 
+</div>
 
 
   <div class="container-fluid">
