--- a/public/research.html
+++ b/public/research.html
@@ -14,7 +14,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css">
 
-    <title>Whack</title>
+    <title>Template</title>
     <style media="screen">
       body{background-color: #EDE8CE;}
 
@@ -89,22 +89,19 @@
   <div class="container">
       <div class="jumbotron shadow-lg" style="background-color:#A2C0CD">
         <!-- text-primary -->
-        <div class="h1"><span class="badge badge-warning text-primary">Whack</span></div>
+        <div class="h1"><span class="badge badge-warning text-primary">Research</span></div>
         <hr class="my-5">
         <!-- rounded badge: -->
-            <p class="lead"><span class="badge badge-pill" style="background-color:#052F5F">Take an office break</span> and see how many computers you can whack!</p>
+            <p class="lead"><span class="badge badge-pill" style="background-color:#052F5F">Use this</span> template to show carousel of canva images w/my fave play quotes</p>
 
         <hr class="my-1">
 
 
-            <button type="button" class="btn btn-warning text-primary" data-toggle="collapse" href="#whack">Play It</button>
+            <button type="button" class="btn btn-warning text-primary">Learn More</button>
       </div>
   </div>
 <hr class="my-5">
-  <div class="container collapse" id="whack">
-    <h1>test test test</h1>
 
-  </div>
 
 
   <div class="container-fluid">
@@ -114,12 +111,12 @@
     <div id="myMod" class="modal fade">
           <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
-                  <div class="modal-header"><h3 class="modal-title">Whack</h3>
+                  <div class="modal-header"><h3 class="modal-title">Title</h3>
                   <button type="button" class="close" data-dismiss="modal">
                   <span>x</span></button>
                   </div>
                   <div class="modal-body">
-                    Take an office break and see how many computers you can whack!
+                    Hello World
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Send Message</button>
