--- a/public/simon.html
+++ b/public/simon.html
@@ -62,13 +62,14 @@
                 <a class="dropdown-item" href="workit.html">In Progress</a>
               </div>
           </li>
-          <li class="nav-item"><a href="#" class="nav-link">Research</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="research.html" class="nav-link">Research</a></li>
           <li class="nav-item"><a href="connect.html" class="nav-link">Connect</a></li>
 
-          <li class="nav-item"><a href="#" data-toggle="modal" data-target="#myMod" class="nav-link">About</a></li>
+          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
         </ul>
       </div>
-      <h5 class="nav-item text-right"><a href="#" class="nav-link">PLAYD</a></h5>
+      <h5 class="nav-item text-right"><a href="#" data-toggle="modal" data-target="#myMod" class="nav-link">PLAYD</a></h5>
     </nav>
 
   <!-- Image Carousel -->
