--- a/public/workit.html
+++ b/public/workit.html
@@ -41,27 +41,24 @@
                 <a class="dropdown-item" href="workit.html">In Progress</a>
               </div>
           </li>
-          <li class="nav-item"><a href="#" class="nav-link">Research</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Connect</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="research.html" class="nav-link">Research</a></li>
+          <li class="nav-item"><a href="connect.html" class="nav-link">Connect</a></li>
 
-          <li class="nav-item"><a href="#" data-toggle="modal" data-target="#myMod" class="nav-link">About</a></li>
+          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
         </ul>
       </div>
-      <h5 class="nav-item text-right"><a href="#" class="nav-link">PLAYD</a></h5>
+      <h5 class="nav-item text-right"><a href="#" data-toggle="modal" data-target="#myMod" class="nav-link">PLAYD</a></h5>
     </nav>
 
   <!-- Image Carousel -->
   <div class="container">
-
-
   <div id="car" class="carousel slide" data-ride="carousel">
-
     <ol class="carousel-indicators">
       <li data-target="#car" data-slide-to="0" class="active"></li>
       <li data-target="#car" data-slide-to="1"></li>
       <li data-target="#car" data-slide-to="2"></li>
       <li data-target="#car" data-slide-to="3"></li>
-      <!-- <li data-target="#car" data-slide-to="4"></li> -->
     </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
