added simple version of whack game - needs more styling

--- a/public/simon.html
+++ b/public/simon.html
@@ -129,7 +129,7 @@
   <div class="container collapse" id="simon">
     <div class="row">
       <div class="col-md-6 mx-auto text-center">
-        <input type="button" class="btn btn-warning btn-block mb-2 text-primary" value="Start" onclick="start()" data-toggle="tooltip" data-placement="top" title="The color sequence will be displayed in the box below & you can press the color boxes to the right to mimic the sequence.">
+        <input type="button" class="btn btn-warning btn-block mb-2 text-primary" value="Start" onclick="start()" data-toggle="tooltip" data-placement="top" title="The color sequence will be displayed in the box below & you can press the color boxes to the right to mimic the sequence afterwards.">
         <div id="output" class="img-fluid"></div>
       </div>
       <div class="col-md-6 mx-auto text-center">
