--- a/public/whack.html
+++ b/public/whack.html
@@ -30,6 +30,7 @@
 
         .office {
             float: left;
+
             width: 120px;
             height: 170px;
             overflow: hidden;
@@ -59,6 +60,10 @@
 
         .popup {
             top: 0;
+        }
+        #h1W{
+          color:#052F5F;
+          font-family: 'Kalam', cursive;
         }
     </style>
   </head>
@@ -146,9 +151,9 @@
   <div class="container collapse" id="whack">
     <div class="row">
       <div class="col-lg-2 jumbotron mx-auto text-center" style="background-color:#A2C0CD">
-              <ul class="list-group" style="background-color:#EDE8CE">
-                <li class="list-group-item">Score:<span class="score">0</span></li>
-                <li class="list-group-item">Timer:<span id="timer">15</span></li>
+              <ul class="list-group">
+                <li class="list-group-item" style="background-color:#EDE8CE">Score: <span class="score">0</span></li>
+                <li class="list-group-item" style="background-color:#EDE8CE">Timer: <span id="timer">15</span></li>
                 <!-- <li class="list-group-item">Third</li>
                 <li class="list-group-item">Fourth</li>
                 <li class="list-group-item">Fifth</li> -->
@@ -213,9 +218,9 @@
         var message = document.getElementById('message');
 
         function build() {
-            var html = "<h1>Hit the computer</h1>";
+            var html = '<h1 id="h1W"><span class="badge badge-warning text-primary">Whack the PCs!!!</span></h1>';
             for (var x = 0; x < offices; x++) {
-                html += '<div class="office"><div class="desk"></div><div class="computer"></div></div>';
+                html += '<div class="container"><div class="office"><div class="desk"></div><div class="computer"></div></div></div>';
             }
             document.querySelector('.gameboard').innerHTML = html;
             computer = document.querySelectorAll('.computer');
@@ -250,7 +255,7 @@
             rndTimer = null;
             var gameboard = document.querySelector('.gameboard');
             gameboard.style.display = "none";
-            message.innerHTML = "GAME Over! You whacked "+score+" computers in 15 seconds! If you want to try to beat that record press start to play again."
+            message.innerHTML = "GAME Over! You whacked <strong>"+score+" </strong>computers in 15 seconds! If you want to try to beat that record press start to play again."
             stopWatch = 16;
             score = 0;
           } else {
