--- a/public/simon.html
+++ b/public/simon.html
@@ -142,10 +142,6 @@
     </div>
   </div>
 
-  <div class="container-fluid">
-      © 2018 Copyright
-    </div>
-
     <div id="myMod" class="modal fade">
           <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
@@ -163,7 +159,19 @@
           </div>
     </div>
 
-
+    <!-- Footer -->
+    <footer class="container-fluid text-light mt-3 fixed-bottom" style="background-color:#052F5F">
+              <!-- footer content -->
+              <p class="text-center" style="color:#5B9279">&copy; 2018 Playd</p>
+              <div class="text-center">
+                <ul class="list-inline">
+                    <li class="list-inline-item text-primary"><a href="" target="_blank"><i class="fab fa-youtube-square fa-2x"></i></a></li>
+                    <li class="list-inline-item"><a href="" target="_blank" style="color:#EDE8CE"><i class="fab fa-facebook-square fa-2x"></i></a></li>
+                    <li class="list-inline-item text-danger"><a href="" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a></li>
+                    <li class="list-inline-item"><a href="" target="_blank" style="color:#EDE8CE"><i class="fab fa-pinterest-square fa-2x"></i></a></li>
+                </ul>
+              </div>
+            </footer>
 
     <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
