more footer styling

--- a/public/connect.html
+++ b/public/connect.html
@@ -144,7 +144,7 @@
     <!-- Footer -->
     <footer class="container-fluid text-light mt-3 fixed-bottom" style="background-color:#052F5F">
               <!-- footer content -->
-              <p class="text-center" style="color:#5B9279">&copy; 2018 Playd</p>
+              <p class="text-center pt-2" style="color:#EDE8CE">&copy; 2018 Playd</p>
               <div class="text-center">
                 <ul class="list-inline">
                     <li class="list-inline-item text-primary"><a href="" target="_blank"><i class="fab fa-youtube-square fa-2x"></i></a></li>
