--- a/public/simon.html
+++ b/public/simon.html
@@ -161,18 +161,30 @@
 
     <!-- Footer -->
     <footer class="container-fluid text-light mt-3 fixed-bottom" style="background-color:#052F5F">
-              <!-- footer content -->
-              <p class="text-center pt-2" style="color:#EDE8CE">&copy; 2018 Playd</p>
-              <div class="text-center">
-                <ul class="list-inline">
-                    <li class="list-inline-item text-primary"><a href="" target="_blank"><i class="fab fa-youtube-square fa-2x"></i></a></li>
-                    <li class="list-inline-item"><a href="" target="_blank" style="color:#EDE8CE"><i class="fab fa-facebook-square fa-2x"></i></a></li>
-                    <li class="list-inline-item text-danger"><a href="" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a></li>
-                    <li class="list-inline-item"><a href="" target="_blank" style="color:#EDE8CE"><i class="fab fa-pinterest-square fa-2x"></i></a></li>
-                </ul>
-              </div>
-            </footer>
-
+      <div class="row">
+          <div class="col pt-4">
+                <p class="text-center" style="color:#EDE8CE">&copy; 2018 Playd</p>
+          </div>
+          <div class="col pt-3">
+            <div class="text-center">
+              <ul class="list-inline">
+                  <li class="list-inline-item text-primary"><a href="" target="_blank"><i class="fab fa-youtube-square fa-2x"></i></a></li>
+                  <li class="list-inline-item"><a href="" target="_blank" style="color:#EDE8CE"><i class="fab fa-facebook-square fa-2x"></i></a></li>
+                  <li class="list-inline-item text-danger"><a href="" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a></li>
+                  <li class="list-inline-item"><a href="" target="_blank" style="color:#EDE8CE"><i class="fab fa-pinterest-square fa-2x"></i></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col pt-4">
+            <ul class="list-inline">
+                <li class="list-inline-item text-primary"><a href="" target="_blank">Terms of Use</a></li>
+                <li class="list-inline-item"><a href="" target="_blank" style="color:#EDE8CE">Privacy Policy</a></li>
+                <li class="list-inline-item text-primary"><a href="" target="_blank">Legal</a></li>
+            </ul>
+          </div>
+      </div>
+    </footer>
+<!-- add to footer: Terms of Use, Privacy Policy, Legal -->
     <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
