bombastic footer update

--- a/public/simon.html
+++ b/public/simon.html
@@ -160,7 +160,10 @@
     </div>
 
     <!-- Footer -->
-    <footer class="container-fluid text-light mt-3 fixed-bottom" style="background-color:#052F5F">
+    <footer class="navbar container-fluid text-light mt-3 fixed-bottom sticky-bottom" style="background-color:#052F5F">
+      <button type="button" class="navbar-toggler mx-auto" data-toggle="collapse" data-target="#footer"><img src="../assets/cube-one-color-32-189122.png" alt="" data-toggle="tooltip" data-placement="top" title="Check out our Privacy Policy, Terms of Use, Legal Statement, and Social Media Accounts"></button>
+      <div class="collapse navbar-collapse" id="footer">
+
       <div class="row">
           <div class="col pt-4">
                 <p class="text-center" style="color:#EDE8CE">&copy; 2018 Playd</p>
@@ -183,8 +186,9 @@
             </ul>
           </div>
       </div>
+      </div>
     </footer>
-<!-- add to footer: Terms of Use, Privacy Policy, Legal -->
+
     <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
