--- a/public/workit.html
+++ b/public/workit.html
@@ -167,18 +167,34 @@
     </div>
 
     <!-- Footer -->
-    <footer class="container-fluid text-light mt-3 fixed-bottom" style="background-color:#052F5F">
-              <!-- footer content -->
-              <p class="text-center pt-2" style="color:#EDE8CE">&copy; 2018 Playd</p>
-              <div class="text-center">
-                <ul class="list-inline">
-                    <li class="list-inline-item text-primary"><a href="" target="_blank"><i class="fab fa-youtube-square fa-2x"></i></a></li>
-                    <li class="list-inline-item"><a href="" target="_blank" style="color:#EDE8CE"><i class="fab fa-facebook-square fa-2x"></i></a></li>
-                    <li class="list-inline-item text-danger"><a href="" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a></li>
-                    <li class="list-inline-item"><a href="" target="_blank" style="color:#EDE8CE"><i class="fab fa-pinterest-square fa-2x"></i></a></li>
-                </ul>
-              </div>
-            </footer>
+    <footer class="navbar container-fluid text-light mt-3 fixed-bottom sticky-bottom" style="background-color:#052F5F">
+      <button type="button" class="navbar-toggler mx-auto" data-toggle="collapse" data-target="#footer"><img src="../assets/cube-one-color-32-189122.png" alt="" data-toggle="tooltip" data-placement="top" title="Check out our Privacy Policy, Terms of Use, Legal Statement, and Social Media Accounts"></button>
+      <div class="collapse navbar-collapse" id="footer">
+
+      <div class="row">
+          <div class="col pt-4">
+                <p class="text-center" style="color:#EDE8CE">&copy; 2018 Playd</p>
+          </div>
+          <div class="col pt-3">
+            <div class="text-center">
+              <ul class="list-inline">
+                  <li class="list-inline-item text-primary"><a href="" target="_blank"><i class="fab fa-youtube-square fa-2x"></i></a></li>
+                  <li class="list-inline-item"><a href="" target="_blank" style="color:#EDE8CE"><i class="fab fa-facebook-square fa-2x"></i></a></li>
+                  <li class="list-inline-item text-danger"><a href="" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a></li>
+                  <li class="list-inline-item"><a href="" target="_blank" style="color:#EDE8CE"><i class="fab fa-pinterest-square fa-2x"></i></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col pt-4">
+            <ul class="list-inline">
+                <li class="list-inline-item text-primary"><a href="" target="_blank">Terms of Use</a></li>
+                <li class="list-inline-item"><a href="" target="_blank" style="color:#EDE8CE">Privacy Policy</a></li>
+                <li class="list-inline-item text-primary"><a href="" target="_blank">Legal</a></li>
+            </ul>
+          </div>
+      </div>
+      </div>
+    </footer>
 
     <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
