added design structure for research portion

--- a/public/about.html
+++ b/public/about.html
@@ -167,7 +167,7 @@
     <footer class="navbar container-fluid text-light mt-3 fixed-bottom sticky-bottom" style="background-color:#052F5F">
       <button type="button" class="navbar-toggler mx-auto" data-toggle="collapse" data-target="#footer"><img src="../assets/cube-one-color-32-189122.png" alt="" data-toggle="tooltip" data-placement="top" title="Check out our Privacy Policy, Terms of Use, Legal Statement, and Social Media Accounts"></button>
       <div class="collapse navbar-collapse" id="footer">
-
+<!-- collapse the 3 columns to one at small screen -->
       <div class="row">
           <div class="col pt-4">
                 <p class="text-center" style="color:#EDE8CE">&copy; 2018 Playd</p>
