--- a/public/research.html
+++ b/public/research.html
@@ -122,6 +122,66 @@
           </div>
     </div>
 
+    <!-- Research content -->
+<div class="container">
+  <h1 class="">Research</h1>
+  <small>Validating play on the clock in the classroom AND workplace!</small>
+
+    <div class="container pb-4">
+      <div class="row">
+
+        <div class="col-md-6">
+          <div class="card">
+            <a href="#"><img src="http://via.placeholder.com/500x300" class="card-img-top img-fluid"></a>
+          <h4 class="card-title">Research Source #1</h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <div class="card">
+            <a href="#"><img src="http://via.placeholder.com/500x300" class="card-img-top img-fluid"></a>
+          <h4 class="card-title">Research Source #2</h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+        </div>
+
+      <div class="col-md-6">
+          <div class="card">
+            <a href="#"><img src="http://via.placeholder.com/500x300" class="card-img-top img-fluid"></a>
+          <h4 class="card-title">Research Source #3</h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+      </div>
+
+      <div class="col-md-6">
+          <div class="card">
+            <a href="#"><img src="http://via.placeholder.com/500x300" class="card-img-top img-fluid"></a>
+          <h4 class="card-title">Research Source #4</h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+      </div>
+
+      <div class="col-md-6">
+          <div class="card">
+            <a href="#"><img src="http://via.placeholder.com/500x300" class="card-img-top img-fluid"></a>
+          <h4 class="card-title">Research Source #5</h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+      </div>
+
+      <div class="col-md-6">
+          <div class="card">
+            <a href="#"><img src="http://via.placeholder.com/500x300" class="card-img-top img-fluid"></a>
+          <h4 class="card-title">Research Source #6</h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+      </div>
+    </div>
+  </div>  <!-- container end -->
+  </div>  <!-- services container end -->
+
+
     <!-- Footer -->
     <footer class="navbar container-fluid text-light mt-3 fixed-bottom sticky-bottom" style="background-color:#052F5F">
       <button type="button" class="navbar-toggler mx-auto" data-toggle="collapse" data-target="#footer"><img src="../assets/cube-one-color-32-189122.png" alt="" data-toggle="tooltip" data-placement="top" title="Check out our Privacy Policy, Terms of Use, Legal Statement, and Social Media Accounts"></button>
