trying to add collapsible content for hilo game & struggling

--- a/public/hilo.html
+++ b/public/hilo.html
@@ -17,11 +17,12 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css">
 
-    <title>Template</title>
+    <title>Hi || Lo</title>
     <style media="screen">
       body{background-color: #EDE8CE;}
 
       #fontK{font-family: 'Kalam', cursive;}
+
     </style>
   </head>
   <body>
@@ -106,8 +107,9 @@
   </div>
 <hr class="my-5">
 <div class="container collapse" id="hilo">
-  <h1>test test test</h1>
 
+      <h1>test test test test test test test</h1>
+      
 </div>
 
     <div id="myMod" class="modal fade">
@@ -168,6 +170,8 @@
         $('[data-toggle="tooltip"]').tooltip()
         $('[data-toggle="popover"]').popover()
       })
+
+
     </script>
     </body>
   </html>
