--- a/public/research.html
+++ b/public/research.html
@@ -125,7 +125,7 @@
     <!-- Research content -->
 <div class="container">
   <h1 class="">Research</h1>
-  <small>Validating play on the clock in the classroom AND workplace!</small>
+  <small>Validating play in your life, on the clock, in the classroom, AND workplace!</small>
 
     <div class="container pb-4">
       <div class="row">
