first heroku commit

--- a/public/connect.html
+++ b/public/connect.html
@@ -89,7 +89,7 @@
 <br>
 
 <!-- Main content -->
-    <div class="container pb-4">
+    <div class="container pb-5 mb-5">
       <h1 class="">Contact</h1>
       <small>Email me for more information</small>
       <div class="container jumbotron" style="background-color:#768DA7">
@@ -135,7 +135,11 @@
                     Hello World
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Send Message</button>
+                    <!-- send to which email? -->
+                    <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Send Message</button> -->
+
+                    <a id="contactLinks" href="mailto:jenniferschumann1@gmail.com" class="btn btn-secondary" data-dismiss="modal">Send Message</a>
+
                   </div>
             </div>
           </div>
