--- a/public/research.html
+++ b/public/research.html
@@ -181,7 +181,15 @@
   </div>  <!-- container end -->
   </div>  <!-- services container end -->
 
+  <!-- create button for citations -->
+  <div class="container pb-5 mb-5">
+      <button type="button" class="btn btn-warning  text-primary btn-block" data-toggle="collapse" href="#cite">Citations</button>
+    <!-- <br><br><br><br><br><br> -->
+  </div>
 
+  <div class="container collapse pb-5 mb-5" id="cite">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  </div>
     <!-- Footer -->
     <footer class="navbar container-fluid text-light mt-3 fixed-bottom sticky-bottom" style="background-color:#052F5F">
       <button type="button" class="navbar-toggler mx-auto" data-toggle="collapse" data-target="#footer"><img src="../assets/cube-one-color-32-189122.png" alt="" data-toggle="tooltip" data-placement="top" title="Check out our Privacy Policy, Terms of Use, Legal Statement, and Social Media Accounts"></button>
